# form_langs_practica

./: CMakeLists.txt  README.md  a.out  ioputter.cpp  ioputter.h  main.cpp  slib.cpp  slib.h
earley/: earley.py  parse.py  test.py
lr1/: grammar.py  in  lr1.py  parse.py
regex-task/: main.cpp
regex-task/include/: ioputter.hpp  slib.hpp
regex-task/src/: ioputter.cpp  slib.cpp
regex-task/tests/: CMakeLists.txt  Makefile  TestBase.cpp
src/: slib.cpp
tests/: CMakeLists.txt  TestBase.cpp  TestBase.hpp
